Fix: H3 after H2 spacing

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -156,7 +156,7 @@ h2+h4 {
 }
 
 h2+h3 {
-    margin-top: 24px;
+    margin-top: 16px;
 }
 
 pre {
